--- a/FrontEndResume/package.json
+++ b/FrontEndResume/package.json
@@ -16,13 +16,13 @@
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "sass": "^1.49.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "css":"sass src/styles.scss src/styles.css",
+    "css": "sass src/styles.scss src/styles.css",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
