--- a/FrontEndResume/package.json
+++ b/FrontEndResume/package.json
@@ -2,7 +2,7 @@
   "name": "resume",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:8000/",
+  "proxy": "http://localhost:8000/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "^5.0.0",
+    "react-youtube": "^8.0.0",
     "sass": "^1.49.0",
     "web-vitals": "^2.1.3"
   },
