--- a/FrontEndResume/package.json
+++ b/FrontEndResume/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "react-youtube": "^8.0.0",
     "sass": "^1.49.0",
