--- a/BackEndResume/package.json
+++ b/BackEndResume/package.json
@@ -16,6 +16,7 @@
     "server": "node ./dist-server/bin/www",
     "dev": "SET NODE_ENV=development&& npm-run-all build server",
     "prod": "NODE_ENV=production npm-run-all build server",
+    "prodlinux":"export NODE_ENV=production npm-run-all build server",
     "transpile": "babel ./server --out-dir dist-server",
     "clean": "rimraf dist-server"
   },
